# SecurityProtocol

./: BaseASN1.cpp  BaseAsn1.h  CMakeLists.txt  Codec.cpp  Codec.h  PoolSocket.cpp  PoolSocket.h  RespondCodec.cpp  RespondCodec.h  itcast_asn1_der.cpp  itcast_asn1_der.h  itcastderlog.cpp  itcastderlog.h  keymng_msg.h  main.cpp
client/: CMakeLists.txt
server/: CMakeLists.txt  ServerOperation.cpp  ServerOperation.h  test.cpp
